force-app/main/default/objects/OP_Competitors__c/OP_Competitors__c.object-meta.xml
<CustomObject>
    <label>Competitor</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Competitor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>