force-app/main/default/objects/OP_Competitors__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipName>Competitors1</relationshipName>
    <type>Lookup</type>
</CustomField>