force-app/main/default/objects/OP_Competitors__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <inlineHelpText>If this field is left blank, the value will pull directly from the competitor record you selected (if value exists).</inlineHelpText>
    <label>Strengths</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>