force-app/main/default/objects/OP_Competitors__c/fields/What_is_their_solution__c.field-meta.xml
<CustomField>
    <fullName>What_is_their_solution__c</fullName>
    <label>What is their solution?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>