force-app/main/default/objects/OP_Competitors__c/fields/With_whom_are_they_aligned__c.field-meta.xml
<CustomField>
    <fullName>With_whom_are_they_aligned__c</fullName>
    <inlineHelpText>Give the name and title of the people in the organization who want this competitor to win. What are the political implications of this relationship? Also indicate any past alignment the competitor has established that could affect the outcome.</inlineHelpText>
    <label>With whom are they aligned?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>